k8s-essentials/14_ingress/green.yaml
apiVersion: v1
kind: Pod
metadata:
  name: green
  labels:
    app: green
spec:
  containers:
    - name: nginx
      image: nginx:1.21.6
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
  volumes:
    - name: html
      configMap:
        name: green
        items:
          - key: body
            path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: green
  ports:
    - port: 80
